--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -10,7 +10,7 @@ resources.frontController.params.displayExceptions = 0
 
 resources.frontController.moduleDirectory = APPLICATION_PATH "/modules"
 resources.layout.layoutPath = APPLICATION_PATH "/layouts/scripts/"
-resources.db.adapter = "PDO_MYSQL"
+resources.db.adapter = "mysqli"
 resources.db.params.host = "development.smkn4bdg.sch.id"
 resources.db.params.dbname = "smkn4bdg_dev"
 resources.db.params.username = "smkn4bdg_egiw"
