--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -10,13 +10,17 @@ resources.frontController.params.displayExceptions = 0
 
 resources.frontController.moduleDirectory = APPLICATION_PATH "/modules"
 resources.layout.layoutPath = APPLICATION_PATH "/layouts/scripts/"
-resources.db.adapter = "mysqli"
+resources.db.adapter = "PDO_MYSQL"
 resources.db.params.host = "development.smkn4bdg.sch.id"
 resources.db.params.dbname = "smkn4bdg_dev"
 resources.db.params.username = "smkn4bdg_egiw"
 resources.db.params.password = "axcldsiox"
+;resources.db.params.host = "localhost"
+;resources.db.params.dbname = "smkn4bdg"
+;resources.db.params.username = "root"
+;resources.db.params.password = ""
 resources.view[] =
-resources.modules[] = 
+resources.modules[] =
 [staging : production]
 
 [testing : production]
