--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -11,7 +11,7 @@ resources.frontController.params.displayExceptions = 0
 resources.frontController.moduleDirectory = APPLICATION_PATH "/modules"
 resources.layout.layoutPath = APPLICATION_PATH "/layouts/scripts/"
 resources.db.adapter = "PDO_MYSQL"
-resources.db.params.host = "development.smkn4bdg.sch.id"
+resources.db.params.host = "smkn4bdg.sch.id"
 resources.db.params.dbname = "smkn4bdg_dev"
 resources.db.params.username = "smkn4bdg_egiw"
 resources.db.params.password = "axcldsiox"
