Fitur mading di admin

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -12,5 +12,5 @@ file.reference.pear-PHPUnit=C:\\xampp\\php\\pear\\PHPUnit
 getter.setter.method.name.generation=AS_JAVA
 remote.connection=egisolehhasdi-8334f7
 remote.upload=ON_SAVE
-run.as=REMOTE
+run.as=LOCAL
 url=http://local.smkn4bdg.sch.id/
