--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -14,5 +14,5 @@ source.encoding=UTF-8
 src.dir=.
 tags.asp=false
 tags.short=true
-test.src.dir=C:\\xampp\\htdocs\\www.smkn4bdg.sch.id\\tests
+test.src.dir=tests
 web.root=public
