--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -11,13 +11,13 @@ resources.frontController.params.displayExceptions = 0
 resources.frontController.moduleDirectory = APPLICATION_PATH "/modules"
 resources.layout.layoutPath = APPLICATION_PATH "/layouts/scripts/"
 resources.db.adapter = "PDO_MYSQL"
-resources.db.params.host = "smkn4bdg.sch.id"
-resources.db.params.dbname = "smkn4bdg_dev"
-resources.db.params.username = "smkn4bdg_egiw"
-resources.db.params.password = "axcldsiox"
-;resources.db.params.host = "localhost"
-;resources.db.params.dbname = "smkn4bdg"
-;resources.db.params.username = "root"
+resources.db.params.host = ""
+resources.db.params.dbname = ""
+resources.db.params.username = ""
+resources.db.params.password = ""
+;resources.db.params.host = ""
+;resources.db.params.dbname = ""
+;resources.db.params.username = ""
 ;resources.db.params.password = ""
 resources.view[] =
 resources.modules[] =
